[package]
name = "server"
version = "0.1.0"
authors = ["Yue Yang <g1enyy0ung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
# diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
